Try to fix previous commit
Looks like I messed up the scss and needed the ampersand.

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -914,11 +914,11 @@ p, li {
                     font-size: smaller;
                 }
 
-                figure {
+                & figure {
                     padding: 3px;
                     border: 1px solid #e1e2ef;
                 }
-                figcaption {
+                & figcaption {
                     color: #787882;
                     padding: 5px;
                 }
